--- a/src/app/components/shared/page/sidebar/sidebar.component.html
+++ b/src/app/components/shared/page/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
 				<a routerLink="/producers" routerLinkActive="active"><i class="fa fa-gavel fa-fw"></i> Producers</a>
 			</li>
 			<li>
-				<a routerLink="/contracts" routerLinkActive="active"><i class="fa fa-files-o fa-fw"></i> Messages</a>
+				<a routerLink="/contracts" routerLinkActive="active"><i class="fa fa-files-o fa-fw"></i> Actions</a>
 			</li>
 		</ul>
 	</div>
