--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -83,7 +83,7 @@
 							</div>
 							<div class="col-xs-9 text-right">
 								<div class="medium">{{stats[3]| number}}</div>
-								<div>Messages</div>
+								<div>Actions</div>
 							</div>
 						</div>
 					</div>
@@ -162,7 +162,7 @@
 								<tr>
 									<th>#</th>
 									<th>Time</th>
-									<th>Msgs</th>
+									<th>Actions</th>
 								</tr>
 								</thead>
 								<tbody>
@@ -170,7 +170,7 @@
 									<td><a routerLink="/transactions/{{transaction.transaction_id}}">{{transaction.transaction_id | slice:0:32}}...</a>
 									</td>
 									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
-									<td>{{transaction.messages.length}}</td>
+									<td>{{transaction.actions.length}}</td>
 								</tr>
 								</tbody>
 							</table>
