--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -28,8 +28,8 @@
 									</td>
 								</tr>
 								<tr>
-									<td>Created At:</td>
-									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
+									<td>Timestamp:</td>
+									<td>{{transaction.ref_block_timestamp.sec * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
 									<td>Scope:</td>
