--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -169,7 +169,7 @@
 								<tr *ngFor="let transaction of transactions">
 									<td><a routerLink="/transactions/{{transaction.transaction_id}}">{{transaction.transaction_id | slice:0:32}}...</a>
 									</td>
-									<td>{{transaction.ref_block_timestamp.sec * 1000 | date:'medium'}}</td>
+									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
 									<td>{{transaction.messages.length}}</td>
 								</tr>
 								</tbody>
