raw blockchain info

--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -56,7 +56,22 @@
 			</div>
 		</div>
 
-		<div class="row" *ngIf="block.transactions.length > 0">
+		<div class="panel-group" id="accordion">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">Blockchain Raw Data</a>
+					</h4>
+				</div>
+				<div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+					<div class="panel-body">
+						<prettyjson [obj]="blockRaw"></prettyjson>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row" *ngIf="block && block.transactions && block.transactions.length > 0">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
