--- a/src/app/components/shared/page/sidebar/sidebar.component.html
+++ b/src/app/components/shared/page/sidebar/sidebar.component.html
@@ -30,6 +30,9 @@
 			<li>
 				<a routerLink="/contracts" routerLinkActive="active"><i class="fa fa-files-o fa-fw"></i> Messages</a>
 			</li>
+			<li>
+				<a target="_blank" href="//walleteos.com"><i class="fa fa-credit-card fa-fw"></i> Wallet</a>
+			</li>
 		</ul>
 	</div>
 	<!-- /.sidebar-collapse -->
