--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Dashboard</h1>
+				<h1 class="page-header">{{ 'Dashboard' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -23,7 +23,7 @@
 					</div>
 					<a href="#" routerLink="/blocks">
 						<div class="panel-footer">
-							<span class="pull-left">View Details</span>
+							<span class="pull-left">{{ 'ViewDetails' | translate }}</span>
 							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
@@ -39,13 +39,13 @@
 							</div>
 							<div class="col-xs-9 text-right">
 								<div class="medium">{{stats[1]| number}}</div>
-								<div>Transactions</div>
+								<div>{{ 'Transactions' | translate }}</div>
 							</div>
 						</div>
 					</div>
 					<a href="#" routerLink="/transactions">
 						<div class="panel-footer">
-							<span class="pull-left">View Details</span>
+							<span class="pull-left">{{ 'ViewDetails' | translate }}</span>
 							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
@@ -67,7 +67,7 @@
 					</div>
 					<a href="#" routerLink="/accounts">
 						<div class="panel-footer">
-							<span class="pull-left">View Details</span>
+							<span class="pull-left">{{ 'ViewDetails' | translate }}</span>
 							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
@@ -89,7 +89,7 @@
 					</div>
 					<a href="#" routerLink="/contracts">
 						<div class="panel-footer">
-							<span class="pull-left">View Details</span>
+							<span class="pull-left">{{ 'ViewDetails' | translate }}</span>
 							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
