--- a/src/app/components/shared/page/navbar/navbar.component.html
+++ b/src/app/components/shared/page/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar-header">
 	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-		<span class="sr-only">Toggle navigation</span>
+		<span class="sr-only">{{ 'ToggleNavigation' | translate }}</span>
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	</button>
-	<a class="navbar-brand" routerLink="/"><img src="/assets/logo.png" />EOS Tracker</a>
+	<a class="navbar-brand" routerLink="/"><img src="/assets/logo.png" />{{ 'EOSTracker' | translate }}</a>
 </div>
