--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Block #{{id}}</h1>
+				<h1 class="page-header">{{ 'Block' | translate }} #{{id}}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,7 +11,7 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Block information
+						{{ 'BlockInformation' | translate }}
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
@@ -19,31 +19,31 @@
 						<div *ngIf="block" class="table-responsive">
 							<table class="table table-striped">
 								<tr>
-									<td>Number:</td>
+									<td>{{ 'Number' | translate }}:</td>
 									<td>{{block.block_num | number}}</td>
 								</tr>
 								<tr>
-									<td>Producer:</td>
+									<td>{{ 'Producer' | translate }}:</td>
 									<td><a routerLink="/accounts/{{block.producer_account_id}}">{{block.producer_account_id}}</a></td>
 								</tr>
 								<tr>
-									<td>Timestamp:</td>
+									<td>{{ 'Timestamp' | translate }}:</td>
 									<td>{{block.timestamp.sec * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
-									<td>Block Id:</td>
+									<td>{{ 'BlockId' | translate }}:</td>
 									<td>{{block.block_id}}</td>
 								</tr>
 								<tr>
-									<td>Previous Block Id:</td>
+									<td>{{ 'Previous' | translate }} {{ 'BlockInformation' | translate }}:</td>
 									<td><a routerLink="/search" [queryParams]="{q: block.prev_block_id}">{{block.prev_block_id}}</a></td>
 								</tr>
 								<tr>
-									<td>Transaction Merkle root:</td>
+									<td>{{ 'Transaction' | translate }} {{ 'MerkleRoot' | translate }}:</td>
 									<td>{{block.transaction_merkle_root}}</td>
 								</tr>
 								<tr>
-									<td>Transactions:</td>
+									<td>{{ 'Transactions' | translate }}:</td>
 									<td>{{block.transactions.length}}</td>
 								</tr>
 							</table>
@@ -60,7 +60,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">Blockchain Raw Data</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">{{ 'BlockchainRawData' | translate }}</a>
 					</h4>
 				</div>
 				<div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
@@ -75,11 +75,11 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Transactions
+						{{ 'Transactions' | translate }}
 
 						<div class="pull-right">
-							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> Previous</i></button>
-							<button *ngIf="transactions && transactions.length == 30" type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">Next <i class="fa fa-angle-right"></i></button>
+							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
+							<button *ngIf="transactions && transactions.length == 30" type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">{{ 'Next' | translate }} <i class="fa fa-angle-right"></i></button>
 						</div>
 
 					</div>
@@ -91,9 +91,9 @@
 								<thead>
 								<tr>
 									<th>#</th>
-									<th>Block Id</th>
-									<th>Created At</th>
-									<th>Messages</th>
+									<th>{{ 'BlockId' | translate }}</th>
+									<th>{{ 'CreatedAt' | translate }}</th>
+									<th>{{ 'Messages' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
