--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Message</h1>
+				<h1 class="page-header">{{ 'Message' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,7 +11,7 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Message
+						{{ 'Message' | translate }}
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
@@ -20,27 +20,27 @@
 						<div *ngIf="message" class="table-responsive">
 							<table class="table table-striped">
 								<tr>
-									<td>Transaction Id:</td>
+									<td>{{ 'TransactionId' | translate }}:</td>
 									<td><a routerLink="/transactions/{{message.transaction_id}}">{{message.transaction_id}}</a></td>
 								</tr>
 								<tr>
-									<td>Message Index:</td>
+									<td>{{ 'MessageIndex' | translate }}:</td>
 									<td>{{message.message_id}}</td>
 								</tr>
 								<tr>
-									<td>Created At:</td>
+									<td>{{ 'CreatedAt' | translate }}:</td>
 									<td>{{message.createdAt.sec * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
-									<td>Handler Account:</td>
+									<td>{{ 'HandlerAccount' | translate }}:</td>
 									<td><a routerLink="/accounts/{{message.handler_account_name}}">{{message.handler_account_name}}</a></td>
 								</tr>
 								<tr>
-									<td>Type:</td>
+									<td>{{ 'Type' | translate }}:</td>
 									<td>{{message.type}}</td>
 								</tr>
 								<tr>
-									<td>Authorization:</td>
+									<td>{{ 'Authorization' | translate }}:</td>
 									<td>
 										<span *ngFor="let account of message.authorization">
 											<a routerLink="/accounts/{{account.account}}">{{account.account}}</a>
