--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Producers</h1>
+				<h1 class="page-header">{{ 'Producers' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,7 +11,7 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Producers
+						{{ 'Producers' | translate }}
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
@@ -20,11 +20,11 @@
 							<table class="table table-striped">
 								<thead>
 								<tr>
-									<th>Name</th>
-									<th>EOS</th>
-									<th>Blocks</th>
-									<th>Created At</th>
-									<th>Updated At</th>
+									<th>{{ 'Name' | translate }}</th>
+									<th>{{ 'EOS' | translate }}</th>
+									<th>{{ 'Blocks' | translate }}</th>
+									<th>{{ 'CreatedAt' | translate }}</th>
+									<th>{{ 'UpdatedAt' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
@@ -50,7 +50,7 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Stats
+						{{ 'Stats' | translate }}
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
