--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Transactions</h1>
+				<h1 class="page-header">{{ 'Transactions' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,11 +11,11 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Transactions
+						{{ 'Transactions' | translate }}
 
 						<div class="pull-right">
-							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> Previous</i></button>
-							<button type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">Next <i class="fa fa-angle-right"></i></button>
+							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
+							<button type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">{{ 'Next' | translate }} <i class="fa fa-angle-right"></i></button>
 						</div>
 
 					</div>
@@ -27,9 +27,9 @@
 								<thead>
 								<tr>
 									<th>#</th>
-									<th>Block Id</th>
-									<th>Created At</th>
-									<th>Messages</th>
+									<th>{{ 'BlockId' | translate }}</th>
+									<th>{{ 'CreatedAt' | translate }}</th>
+									<th>{{ 'Messages' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
