--- a/src/app/components/accounts/accounts.component.html
+++ b/src/app/components/accounts/accounts.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Accounts</h1>
+				<h1 class="page-header">{{ 'Accounts' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,11 +11,11 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Accounts
+						{{ 'Accounts' | translate }}
 
 						<div class="pull-right">
-							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> Previous</i></button>
-							<button *ngIf="accounts && accounts.length == 30" type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">Next <i class="fa fa-angle-right"></i></button>
+							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
+							<button *ngIf="accounts && accounts.length == 30" type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">{{ 'Next' | translate }} <i class="fa fa-angle-right"></i></button>
 						</div>
 					</div>
 					<!-- /.panel-heading -->
@@ -25,10 +25,10 @@
 							<table class="table table-striped">
 								<thead>
 								<tr>
-									<th>Name</th>
-									<th>EOS</th>
-									<th>Created At</th>
-									<th>Updated At</th>
+									<th>{{ 'Name' | translate }}</th>
+									<th>{{ 'EOS' | translate }}</th>
+									<th>{{ 'CreatedAt' | translate }}</th>
+									<th>{{ 'UpdatedAt' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
