--- a/src/app/components/contracts/contracts.component.html
+++ b/src/app/components/contracts/contracts.component.html
@@ -2,7 +2,7 @@
   <div id="page-wrapper">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="page-header">Messages</h1>
+        <h1 class="page-header">{{ 'Messages' | translate }}</h1>
       </div>
       <!-- /.col-lg-12 -->
     </div>
@@ -11,11 +11,11 @@
       <div class="col-lg-12">
         <div class="panel panel-default">
           <div class="panel-heading">
-            Messages
+            {{ 'Messages' | translate }}
 
             <div class="pull-right">
-              <button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> Previous</i></button>
-              <button type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">Next <i class="fa fa-angle-right"></i></button>
+              <button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
+              <button type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">{{ 'Next' | translate }} <i class="fa fa-angle-right"></i></button>
             </div>
 
           </div>
@@ -26,11 +26,11 @@
               <table class="table table-striped">
                 <thead>
                 <tr>
-                  <th>Transaction Id</th>
-                  <th>Created At</th>
-                  <th>Authorization</th>
-                  <th>Handler</th>
-                  <th>Type</th>
+                  <th>{{ 'TransactionId' | translate }}</th>
+                  <th>{{ 'CreatedAt' | translate }}</th>
+                  <th>{{ 'Authorization' | translate }}</th>
+                  <th>{{ 'Handler' | translate }}</th>
+                  <th>{{ 'Type' | translate }}</th>
                 </tr>
                 </thead>
                 <tbody>
