--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -2,7 +2,7 @@
   <div id="page-wrapper">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="page-header">Search {{query | slice:0:21}}</h1>
+        <h1 class="page-header">{{ 'Search' | translate }} {{query | slice:0:21}}</h1>
       </div>
       <!-- /.col-lg-12 -->
     </div>
@@ -11,7 +11,7 @@
       <div class="col-lg-12">
         <div class="panel panel-default">
           <div class="panel-heading">
-            Search
+            {{ 'Search' | translate }}
           </div>
           <!-- /.panel-heading -->
           <div class="panel-body">
