--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Transaction</h1>
+				<h1 class="page-header">{{ 'Transaction' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,7 +11,7 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Transaction
+						{{ 'Transaction' | translate }}
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
@@ -19,20 +19,20 @@
 						<div *ngIf="transaction" class="table-responsive">
 							<table class="table table-striped">
 								<tr>
-									<td>Id:</td>
+									<td>{{ 'Id' | translate }}:</td>
 									<td>{{transaction.transaction_id}}</td>
 								</tr>
 								<tr>
-									<td>Block:</td>
+									<td>{{ 'Block' | translate }}:</td>
 									<td><a routerLink="/search" [queryParams]="{q: transaction.block_id}">{{transaction.block_id}}</a>
 									</td>
 								</tr>
 								<tr>
-									<td>Created At:</td>
+									<td>{{ 'CreatedAt' | translate }}:</td>
 									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
-									<td>Scope:</td>
+									<td>{{ 'Scope' | translate }}:</td>
 									<td>
 										<span *ngFor="let account of transaction.scope">
 											<a routerLink="/accounts/{{account}}">{{account}}</a>
@@ -40,7 +40,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td>Messages:</td>
+									<td>{{ 'Messages' | translate }}:</td>
 									<td>
 										<span *ngIf="transaction.messages.length == 0">{{transaction.messages.length}}</span>
 										<span *ngIf="transaction.messages.length != 0">
@@ -64,7 +64,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">Blockchain Raw Data</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">{{ 'BlockchainRawData' | translate }}</a>
 					</h4>
 				</div>
 				<div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
