displaying block trans time

--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -28,8 +28,8 @@
 									</td>
 								</tr>
 								<tr>
-									<td>{{ 'CreatedAt' | translate }}:</td>
-									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
+									<td>{{ 'Timestamp' | translate }}:</td>
+									<td>{{transaction.ref_block_timestamp.sec * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
 									<td>{{ 'Scope' | translate }}:</td>
