--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -27,16 +27,16 @@
 								<thead>
 								<tr>
 									<th>#</th>
-									<th>{{ 'BlockId' | translate }}</th>
-									<th>{{ 'CreatedAt' | translate }}</th>
+									<th>{{ 'Block' | translate }}</th>
+									<th>{{ 'Timestamp' | translate }}</th>
 									<th>{{ 'Messages' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
 								<tr *ngFor="let transaction of transactions">
 									<td><a routerLink="/transactions/{{transaction.transaction_id}}">{{transaction.transaction_id|slice:0:32}}...</a></td>
-									<td><a routerLink="/search" [queryParams]="{q: transaction.block_id}">{{transaction.block_id |slice:0:32}}...</a></td>
-									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
+									<td><a routerLink="/search" [queryParams]="{q: transaction.block_id}">{{transaction.ref_block_num}}</a></td>
+									<td>{{transaction.ref_block_timestamp.sec * 1000 | date:'medium'}}</td>
 									<td>{{transaction.messages.length}}</td>
 								</tr>
 								</tbody>
