--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -92,7 +92,7 @@
 								<tr>
 									<th>#</th>
 									<th>{{ 'BlockId' | translate }}</th>
-									<th>{{ 'CreatedAt' | translate }}</th>
+									<th>{{ 'Timestamp' | translate }}</th>
 									<th>{{ 'Messages' | translate }}</th>
 								</tr>
 								</thead>
@@ -100,7 +100,7 @@
 								<tr *ngFor="let transaction of transactions">
 									<td><a routerLink="/transactions/{{transaction.transaction_id}}">{{transaction.transaction_id|slice:0:32}}...</a></td>
 									<td><a routerLink="/search" [queryParams]="{q: transaction.block_id}">{{transaction.block_id |slice:0:32}}...</a></td>
-									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
+									<td>{{transaction.ref_block_timestamp.sec * 1000 | date:'medium'}}</td>
 									<td>{{transaction.messages.length}}</td>
 								</tr>
 								</tbody>
