wip dawn3 migration

--- a/src/app/components/shared/page/sidebar/sidebar.component.html
+++ b/src/app/components/shared/page/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
 				<a routerLink="/producers" routerLinkActive="active"><i class="fa fa-gavel fa-fw"></i> {{ 'Producers' | translate }}</a>
 			</li>
 			<li>
-				<a routerLink="/contracts" routerLinkActive="active"><i class="fa fa-files-o fa-fw"></i> {{ 'Messages' | translate }}</a>
+				<a routerLink="/actions" routerLinkActive="active"><i class="fa fa-files-o fa-fw"></i> {{ 'Actions' | translate }}</a>
 			</li>
 			<li>
 				<a routerLink="/settings" routerLinkActive="active"><i class="fa fa-cogs fa-fw"></i> {{ 'Settings' | translate }}</a>
