--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -2,7 +2,7 @@
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">{{ 'Message' | translate }}</h1>
+				<h1 class="page-header">{{ 'Action' | translate }}</h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -11,7 +11,7 @@
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						{{ 'Message' | translate }}
+						{{ 'Action' | translate }}
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
