--- a/src/app/components/contracts/contracts.component.html
+++ b/src/app/components/contracts/contracts.component.html
@@ -2,7 +2,7 @@
   <div id="page-wrapper">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="page-header">{{ 'Messages' | translate }}</h1>
+        <h1 class="page-header">{{ 'Actions' | translate }}</h1>
       </div>
       <!-- /.col-lg-12 -->
     </div>
@@ -11,7 +11,7 @@
       <div class="col-lg-12">
         <div class="panel panel-default">
           <div class="panel-heading">
-            {{ 'Messages' | translate }}
+            {{ 'Actions' | translate }}
 
             <div class="pull-right">
               <button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
@@ -35,7 +35,7 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let message of messages">
-                  <td><a routerLink="/contracts/{{message.message_id}}/{{message.transaction_id}}">{{message.transaction_id}}</a></td>
+                  <td><a routerLink="/actions/{{message.message_id}}/{{message.transaction_id}}">{{message.transaction_id}}</a></td>
                   <td>{{message.createdAt.sec * 1000 | date:'medium'}}</td>
                   <td>
                     <span *ngFor="let account of message.authorization">
