--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -83,11 +83,11 @@
 							</div>
 							<div class="col-xs-9 text-right">
 								<div class="medium">{{stats[3]| number}}</div>
-								<div>{{ 'Messages' | translate }}</div>
+								<div>{{ 'Actions' | translate }}</div>
 							</div>
 						</div>
 					</div>
-					<a href="#" routerLink="/contracts">
+					<a href="#" routerLink="/actions">
 						<div class="panel-footer">
 							<span class="pull-left">{{ 'ViewDetails' | translate }}</span>
 							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
